add date slider logic

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,4 @@
 @import url('tailwindcss/base');
 @import url('tailwindcss/components');
 @import url('tailwindcss/utilities');
+@import url('primeicons/primeicons.css');
